Revert "fix: satisfy very small screens (no overflow of other keyboard left side) and increase the place where keyboard can fit (tested near 2000px width)"
This reverts commit 376604d24ae5a8ae9ae873b3fcb66411e4901d6d.

--- a/packages/uhk-web/src/app/components/svg/wrap/svg-keyboard-wrap.component.scss
+++ b/packages/uhk-web/src/app/components/svg/wrap/svg-keyboard-wrap.component.scss
@@ -10,8 +10,7 @@
 keyboard-slider {
     display: block;
     position: relative;
-    overflow: hidden;
-    height: 1000px;
+    height: 500px;
     margin-top: 30px;
 }
 
